# senti

./: Cargo.toml  LICENSE  README.md
src/: cstring.rs  lib.rs  ptr.rs  senti.rs
